# jax_ffi_gen

./: LICENSE  README.md  pyproject.toml
src/: generator.py
src/jax_ffi_gen/: generator.py  parse.py
src/jax_ffi_gen/templates/: template_ffi_call.j2  template_ffi_module.j2  template_instancing.j2
